# public_transport_optimization

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  alembic.ini  api_alerts_cache.pkl  base_route.json  docker-compose.yml  duplicates.csv  logstash.conf  prim_alerts_cache.pkl  pyproject.toml  reset_password.py  setup.py  traffic_cache.pkl  weighted_route.json
.github/workflows/: changelog-check.yml  version-check.yml
public_transport_watcher/: __init__.py  logging_config.py
public_transport_watcher/api/: __init__.py  app.py  logger.py  routes.py
public_transport_watcher/application/: __init__.py  app.py
public_transport_watcher/application/components/: __init__.py  route_display.py  route_map.py  search_state.py  ui_components.py
public_transport_watcher/application/pages/: search.py
public_transport_watcher/application/templates/: address_search.py  route_display.py  ui_components.py
public_transport_watcher/db/: alembic_manager.py  connection.py  init_db.py
public_transport_watcher/db/models/: __init__.py  api_logs.py  base.py  geography.py  pollution.py  transport.py  user.py  weather.py
public_transport_watcher/extractor/: extractor.py
public_transport_watcher/extractor/configuration/: __init__.py  extraction_config.py  mapping.py
public_transport_watcher/extractor/extract/: __init__.py  addresses.py  air_quality.py  alerts.py  categ.py  navigo.py  schedule.py  stations.py  traffic.py  transport.py  weather.py
public_transport_watcher/extractor/insert/: __init__.py  addresses.py  categ.py  navigo.py  schedule.py  stations.py  transport.py
public_transport_watcher/extractor/sql/: __init__.py  get_existing_stations.sql
public_transport_watcher/monitoring/: __init__.py  app.py
public_transport_watcher/monitoring/admin/: __init__.py  create_new_user.py  login.py  show_users.py
public_transport_watcher/monitoring/api_use/: __init__.py  dashboard_api.py  journey.py
public_transport_watcher/monitoring/data_quality/: __init__.py  dashboard_data_quality.py
public_transport_watcher/monitoring/query/: __init__.py
public_transport_watcher/monitoring/reports/: __init__.py  alerts.py  dashboard.py
public_transport_watcher/monitoring/template/: __init__.py  display_metrics_container.py  format_metrics.py  get_safe_query_execution.py
public_transport_watcher/predictor/: __init__.py  arima_predictions.py  graph_builder.py  predictor.py
public_transport_watcher/predictor/arima/: __init__.py  calculate_hourly_profiles.py  find_optimal_params.py  get_data.py  model.py  (+5 more)
public_transport_watcher/seeds/: __init__.py  generate_logs.py
public_transport_watcher/utils/: __init__.py  get_cache_utils.py  get_credentials.py  get_datalake_file.py  get_db_session.py  get_engine.py  get_query_result.py  get_sql_query.py  get_trafic_api.py  get_transports_icons.py  transports_lines.json
(+59 files in other folders)
